# obsidian-wiki-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/obsidian_wiki_mcp/: __init__.py  bibtex.py  cli.py  models.py  schemas.py  server.py  vault.py
src/obsidian_wiki_mcp/scaffold/: CLAUDE.md  Landing.md
src/obsidian_wiki_mcp/scaffold/.claude/commands/: day.md  meeting.md  plan.md  research.md  wiki-audit.md  wiki-diary.md  wiki-ingest-book.md  wiki-ingest.md  wiki-survey.md  wiki-update-project.md  wiki.md
src/obsidian_wiki_mcp/scaffold/_schemas/: concept.yaml  decision.yaml  deliverable.yaml  experiment.yaml  meeting.yaml  note.yaml  person.yaml  project.yaml  resource.yaml  task.yaml  tool.yaml
src/obsidian_wiki_mcp/scaffold/_wiki/: style-guide.md
tests/: test_vault.py
